@@ -310,7 +310,8 @@ typedef enum
    ELM_ACTIVATE_UP,
    ELM_ACTIVATE_DOWN,
    ELM_ACTIVATE_RIGHT,
-   ELM_ACTIVATE_LEFT
+   ELM_ACTIVATE_LEFT,
+   ELM_ACTIVATE_BACK
 } Elm_Activate;
 
 /* Please, ALWAYS update the ELM_WIDGET_SMART_CLASS_INIT macro
