@@ -61,6 +61,7 @@ Additions:
    * Add elm_mapbuf_auto_set/get.
    * Add the API elm_scroller_single_direction_set/get.
    * Add the feature for key events.
+   * Add elm_access_action(), elm_access_action_cb_set()
 
 Improvements:
 
